k8s-configs/ingress/click-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: click-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/click
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/click
            pathType: Exact
            backend:
              service:
                name: search-api
                port:
                  number: 80
