k8s-configs/ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /kong(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-admin-bridge
                port:
                  number: 8001
