k8s-configs/ingress/nexarank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexarank-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nexarank(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nexarank-api
                port:
                  number: 80
