k8s-configs/ingress/nexarank-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexarank-ui-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nexarank-ui
            pathType: Prefix
            backend:
              service:
                name: nexarank-ui
                port:
                  number: 80
