k8s-configs/ingress/search-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: search-api
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: search-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: search-ui
                port:
                  number: 80
